--- a/packages/with-babel/jsconfig.json
+++ b/packages/with-babel/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "checkJs": false
+    "checkJs": false,
+    "types": ["node"]
   },
   "include": ["*.js"]
 }
