chore: enhance ioc samples

--- a/packages/with-babel/jsconfig.json
+++ b/packages/with-babel/jsconfig.json
@@ -4,5 +4,5 @@
     "checkJs": false,
     "types": ["node"]
   },
-  "include": ["*.js"]
+  "include": ["*.js", "ioc/ioc-api.js", "ioc/ioc-usage.js"]
 }
