--- a/packages/with-babel/package.json
+++ b/packages/with-babel/package.json
@@ -9,6 +9,7 @@
     "@babel/plugin-proposal-decorators": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@types/node": "^18.11.7",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.20"
   },
   "scripts": {
