--- a/packages/with-babel/.babelrc
+++ b/packages/with-babel/.babelrc
@@ -1,5 +1,8 @@
 {
   "presets": ["@babel/preset-env"],
+  "targets": {
+    "esmodules": false
+  },
   "plugins": [
     [
       "@babel/plugin-proposal-decorators",
