--- a/packages/with-typescript/package.json
+++ b/packages/with-typescript/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "@swc/core": "^1.3.14",
     "@types/node": "^18.11.7",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "https://typescript.visualstudio.com/cf7ac146-d525-443c-b23c-0d58337efebc/_apis/build/builds/137418/artifacts?artifactName=tgz&fileId=AB77B9F7C08B0A35E9947DAD772F3CFFC61A6E13DD551F32AB732DDCDD7DF4F102&fileName=/typescript-5.0.0-insiders.20221101.tgz"
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc && node dist/index.js"
+    "build": "tsc"
   },
   "nodemonConfig": {
     "ignore": [
@@ -20,7 +22,9 @@
     ],
     "verbose": true,
     "restartable": "rs",
-    "exec": "tsc && node dist/index.js",
+    "execMap": {
+      "ts": "ts-node-esm"
+    },
     "delay": 500,
     "watch": [
       "*.ts"
