--- a/packages/with-typescript/tsconfig.json
+++ b/packages/with-typescript/tsconfig.json
@@ -1,9 +1,26 @@
 {
+  "ts-node": {
+    "swc": false,
+    "pretty": true,
+    "transpileOnly": true,
+    "require": ["tsconfig-paths/register"]
+  },
   "compilerOptions": {
     "lib": [],
     "target": "ES6",
-    "module": "ES6",
+    "module": "CommonJS",
     "outDir": "dist",
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "rootDir": ".",
+    "paths": {
+      "core": ["./ioc/Impls/Core"],
+      "decorators": ["./ioc/Impls/Decorators"],
+      "server-utils": ["./ioc/Impls/Utils"],
+      "create-server": ["./ioc/Impls/CreateServer"]
+    }
+  },
+  "include": ["./**/*.ts"]
 }
