--- a/packages/with-typescript/package.json
+++ b/packages/with-typescript/package.json
@@ -8,7 +8,7 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "npm:@typescript-deploys/pr-build@5.0.0-pr-50820-27"
+    "typescript": "https://typescript.visualstudio.com/cf7ac146-d525-443c-b23c-0d58337efebc/_apis/build/builds/137898/artifacts?artifactName=tgz&fileId=6FB2BB103E56A9586D2E2E87A6EFA518FA1DF0DCEAB1DA2E42D01B659F3DDE6602&fileName=/typescript-5.0.0-insiders.20221108.tgz"
   },
   "scripts": {
     "build": "tsc"
