--- a/packages/with-typescript/tsconfig.json
+++ b/packages/with-typescript/tsconfig.json
@@ -23,5 +23,6 @@
       "create-server": ["./ioc/Impls/CreateServer"]
     }
   },
-  "include": ["./**/*.ts"]
+  "include": ["./**/*.ts"],
+  "exclude": ["_samples", "advanced"]
 }
