--- a/packages/with-typescript/package.json
+++ b/packages/with-typescript/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@types/node": "^18.11.7",
+    "@types/yargs-parser": "^21.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -34,6 +35,7 @@
     "ext": "ts,json"
   },
   "dependencies": {
-    "path-to-regexp": "^6.2.1"
+    "path-to-regexp": "^6.2.1",
+    "yargs-parser": "^21.1.1"
   }
 }
